refactor(technology): apply reactive patterns to use cases and reorganize result models