@@ -1,5 +1,6 @@
 package co.com.bancolombia.usecase.validatetechnologies;
 
+import co.com.bancolombia.model.result.ValidateTechnologiesResult;
 import co.com.bancolombia.model.technology.gateways.TechnologyRepository;
 import lombok.RequiredArgsConstructor;
 import reactor.core.publisher.Mono;
@@ -13,23 +14,30 @@ public class ValidateTechnologiesUseCase {
     private final TechnologyRepository technologyRepository;
 
     public Mono<ValidateTechnologiesResult> execute(List<Long> ids) {
-        if (ids == null || ids.isEmpty()) {
-            return Mono.just(ValidateTechnologiesResult.builder()
-                    .existingIds(List.of())
-                    .notFoundIds(List.of())
-                    .allExist(true)
-                    .build());
-        }
+        return Mono.just(ids)
+                .filter(list -> list != null && !list.isEmpty())
+                .flatMap(this::validateAndBuildResult)
+                .switchIfEmpty(Mono.fromCallable(this::buildEmptyResult));
+    }
 
+    private Mono<ValidateTechnologiesResult> validateAndBuildResult(List<Long> ids) {
         return technologyRepository.findExistingIdsByIds(ids)
                 .collect(Collectors.toSet())
                 .map(existingIds -> buildResult(ids, existingIds));
     }
 
+    private ValidateTechnologiesResult buildEmptyResult() {
+        return ValidateTechnologiesResult.builder()
+                .existingIds(List.of())
+                .notFoundIds(List.of())
+                .allExist(true)
+                .build();
+    }
+
     private ValidateTechnologiesResult buildResult(List<Long> requestedIds, Set<Long> existingIds) {
         List<Long> notFoundIds = requestedIds.stream()
                 .filter(id -> !existingIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
 
         return ValidateTechnologiesResult.builder()
                 .existingIds(List.copyOf(existingIds))
